[project]
name = "pyver-selector"
version = "1.0.0"
description = "Tool to select a known pyenv CPython version based on a poetry's version constraint"
requires-python = ">= 3.8, < 3.11"

[[authors]]
name = "Conner Crosby"
email = "conner@cavcrosby.tech"

[license]
file = "./LICENSE"

[project.scripts]
pyver_selector = "pyver_selector:main"

[build-system]
requires = [
  "setuptools >= 61.0.0",
]
build-backend = "setuptools.build_meta"
